fix(map): make text in attribution box visible
Fixes #116

--- a/src/map/Map.css
+++ b/src/map/Map.css
@@ -107,3 +107,7 @@ section.map {
   margin-top: 4rem;
   user-select: none;
 }
+
+.maplibregl-ctrl-attrib {
+  color: black;
+}
